analizador_semantico/y.output
State 12 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: MAIN bloque

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    3 declar_de_variables_locales: INI_DECLAR_VAR variables_locales FIN_DECLAR_VAR
    4                            | /* empty */

    5 declar_de_subprogs: declar_de_subprogs declar_subprog
    6                   | /* empty */

    7 declar_subprog: cabecera_subprograma bloque

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: DECLAR ID asig_valor mas_variables PYC
   11                        | DECLAR ID error
   12                        | DECLAR error
   13                        | error

   14 mas_variables: mas_variables COMA ID asig_valor
   15              | /* empty */

   16 asig_valor: OP_ASIGNACION expresion
   17           | /* empty */

   18 cabecera_subprograma: DECLAR ID PARIZQ PARDER
   19                     | DECLAR ID PARIZQ declaraciones_id PARDER
   20                     | error

   21 declaraciones_id: declaraciones_id COMA DECLAR ID
   22                 | DECLAR ID

   23 sentencias: sentencias sentencia
   24           | /* empty */

   25 sentencia: bloque
   26          | sentencia_asignacion
   27          | sentencia_if
   28          | sentencia_for_pascal
   29          | sentencia_while
   30          | sentencia_entrada
   31          | sentencia_salida
   32          | sentencia_return
   33          | sentencia_adelante_atras
   34          | sentencia_principio_lista

   35 sentencia_asignacion: ID OP_ASIGNACION expresion PYC
   36                     | error

   37 sentencia_if: SI PARIZQ expresion PARDER THEN sentencia
   38             | SI PARIZQ expresion PARDER THEN sentencia ELSE sentencia

   39 sentencia_for_pascal: FOR sentencia_asignacion TO valor DO sentencia

   40 valor: CONST
   41      | ID

   42 sentencia_while: MIENTRAS PARIZQ expresion PARDER sentencia

   43 sentencia_entrada: METERDATOS lista_variables PYC

   44 lista_variables: lista_variables COMA ID
   45                | ID
   46                | error

   47 sentencia_salida: SACARDATOS lista_expresiones_o_cadena PYC

   48 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expr_cad
   49                           | expr_cad

   50 expr_cad: expresion
   51         | CADENA

   52 sentencia_return: RETURN expresion PYC

   53 expresion: PARIZQ expresion PARDER
   54          | MASMAS expresion
   55          | MENOSMENOS expresion
   56          | expresion MASMAS
   57          | expresion MENOSMENOS
   58          | ASTERISCO expresion
   59          | OP_LIST_UN expresion
   60          | MAS_MENOS expresion
   61          | NEGACION expresion
   62          | OP_AND_BITS expresion
   63          | expresion ARRARR expresion
   64          | expresion MAS_MENOS expresion
   65          | expresion OP_LIST_MUL expresion
   66          | expresion OP_OR_LOG expresion
   67          | expresion OP_AND_LOG expresion
   68          | expresion OP_OR_BITS expresion
   69          | expresion OP_AND_BITS expresion
   70          | expresion OP_OR_EXC expresion
   71          | expresion OP_EQ_NEQ expresion
   72          | expresion OP_REL expresion
   73          | expresion ASTERISCO expresion
   74          | expresion OP_MUL expresion
   75          | expresion MENOSMENOS expresion
   76          | expresion MASMAS expresion ARROBA expresion
   77          | ID
   78          | CONST
   79          | funcion
   80          | agregado

   81 sentencia_adelante_atras: ID SENT_LIST PYC

   82 sentencia_principio_lista: DOLAR ID PYC

   83 agregado: CORIZQ lista_consts CORDER

   84 lista_consts: lista_consts COMA CONST
   85             | CONST

   86 funcion: ID PARIZQ lista_expresiones_o_cadena PARDER


Terminals, with rules where they appear

$end (0) 0
error (256) 11 12 13 20 36 46
OP_ASIGNACION (258) 16 35
ID (259) 10 11 14 18 19 21 22 35 41 44 45 77 81 82 86
CONST (260) 40 78 84 85
DECLAR (261) 10 11 12 18 19 21 22
PARDER (262) 18 19 37 38 42 53 86
PARIZQ (263) 18 19 37 38 42 53 86
METERDATOS (264) 43
MIENTRAS (265) 42
SI (266) 37 38
SACARDATOS (267) 47
FOR (268) 39
INICIOBLOQUE (269) 2
FINBLOQUE (270) 2
PYC (271) 10 35 43 47 52 81 82
TO (272) 39
THEN (273) 37 38
CORIZQ (274) 83
CORDER (275) 83
COMA (276) 14 21 44 48 84
MAIN (277) 1
RETURN (278) 52
INI_DECLAR_VAR (279) 3
FIN_DECLAR_VAR (280) 3
ELSE (281) 38
DO (282) 39
SENT_LIST (283) 81
DOLAR (284) 82
CADENA (285) 51
ASTERISCO (286) 58 73
ARRARR (287) 63
OP_OR_LOG (288) 66
OP_AND_LOG (289) 67
OP_OR_BITS (290) 68
OP_OR_EXC (291) 70
OP_AND_BITS (292) 62 69
OP_EQ_NEQ (293) 71
OP_REL (294) 72
MASMAS (295) 54 56 76
MENOSMENOS (296) 55 57 75
MAS_MENOS (297) 60 64
OP_LIST_MUL (298) 65
OP_MUL (299) 74
OP_LIST_UN (300) 59
NEGACION (301) 61
ARROBA (302) 76


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
programa (49)
    on left: 1, on right: 0
bloque (50)
    on left: 2, on right: 1 7 25
declar_de_variables_locales (51)
    on left: 3 4, on right: 2
declar_de_subprogs (52)
    on left: 5 6, on right: 2 5
declar_subprog (53)
    on left: 7, on right: 5
variables_locales (54)
    on left: 8 9, on right: 3 8
cuerpo_declar_variables (55)
    on left: 10 11 12 13, on right: 8 9
mas_variables (56)
    on left: 14 15, on right: 10 14
asig_valor (57)
    on left: 16 17, on right: 10 14
cabecera_subprograma (58)
    on left: 18 19 20, on right: 7
declaraciones_id (59)
    on left: 21 22, on right: 19 21
sentencias (60)
    on left: 23 24, on right: 2 23
sentencia (61)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 23 37 38 39 42
sentencia_asignacion (62)
    on left: 35 36, on right: 26 39
sentencia_if (63)
    on left: 37 38, on right: 27
sentencia_for_pascal (64)
    on left: 39, on right: 28
valor (65)
    on left: 40 41, on right: 39
sentencia_while (66)
    on left: 42, on right: 29
sentencia_entrada (67)
    on left: 43, on right: 30
lista_variables (68)
    on left: 44 45 46, on right: 43 44
sentencia_salida (69)
    on left: 47, on right: 31
lista_expresiones_o_cadena (70)
    on left: 48 49, on right: 47 48 86
expr_cad (71)
    on left: 50 51, on right: 48 49
sentencia_return (72)
    on left: 52, on right: 32
expresion (73)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80, on right: 16 35 37 38 42 50 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76
sentencia_adelante_atras (74)
    on left: 81, on right: 33
sentencia_principio_lista (75)
    on left: 82, on right: 34
agregado (76)
    on left: 83, on right: 80
lista_consts (77)
    on left: 84 85, on right: 83 84
funcion (78)
    on left: 86, on right: 79


state 0

    0 $accept: . programa $end

    MAIN  shift, and go to state 1

    programa  go to state 2


state 1

    1 programa: MAIN . bloque

    INICIOBLOQUE  shift, and go to state 3

    bloque  go to state 4


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


state 3

    2 bloque: INICIOBLOQUE . declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    INI_DECLAR_VAR  shift, and go to state 6

    $default  reduce using rule 4 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 7


state 4

    1 programa: MAIN bloque .

    $default  reduce using rule 1 (programa)


state 5

    0 $accept: programa $end .

    $default  accept


state 6

    3 declar_de_variables_locales: INI_DECLAR_VAR . variables_locales FIN_DECLAR_VAR

    error   shift, and go to state 8
    DECLAR  shift, and go to state 9

    variables_locales        go to state 10
    cuerpo_declar_variables  go to state 11


state 7

    2 bloque: INICIOBLOQUE declar_de_variables_locales . declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 6 (declar_de_subprogs)

    declar_de_subprogs  go to state 12


state 8

   13 cuerpo_declar_variables: error .

    $default  reduce using rule 13 (cuerpo_declar_variables)


state 9

   10 cuerpo_declar_variables: DECLAR . ID asig_valor mas_variables PYC
   11                        | DECLAR . ID error
   12                        | DECLAR . error

    error  shift, and go to state 13
    ID     shift, and go to state 14


state 10

    3 declar_de_variables_locales: INI_DECLAR_VAR variables_locales . FIN_DECLAR_VAR
    8 variables_locales: variables_locales . cuerpo_declar_variables

    error           shift, and go to state 8
    DECLAR          shift, and go to state 9
    FIN_DECLAR_VAR  shift, and go to state 15

    cuerpo_declar_variables  go to state 16


state 11

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 9 (variables_locales)


state 12

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs . sentencias FINBLOQUE
    5 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error   shift, and go to state 17
    DECLAR  shift, and go to state 18

    error         [reduce using rule 24 (sentencias)]
    ID            reduce using rule 24 (sentencias)
    METERDATOS    reduce using rule 24 (sentencias)
    MIENTRAS      reduce using rule 24 (sentencias)
    SI            reduce using rule 24 (sentencias)
    SACARDATOS    reduce using rule 24 (sentencias)
    FOR           reduce using rule 24 (sentencias)
    INICIOBLOQUE  reduce using rule 24 (sentencias)
    FINBLOQUE     reduce using rule 24 (sentencias)
    RETURN        reduce using rule 24 (sentencias)
    DOLAR         reduce using rule 24 (sentencias)

    declar_subprog        go to state 19
    cabecera_subprograma  go to state 20
    sentencias            go to state 21


state 13

   12 cuerpo_declar_variables: DECLAR error .

    $default  reduce using rule 12 (cuerpo_declar_variables)


state 14

   10 cuerpo_declar_variables: DECLAR ID . asig_valor mas_variables PYC
   11                        | DECLAR ID . error

    error          shift, and go to state 22
    OP_ASIGNACION  shift, and go to state 23

    PYC   reduce using rule 17 (asig_valor)
    COMA  reduce using rule 17 (asig_valor)

    asig_valor  go to state 24


state 15

    3 declar_de_variables_locales: INI_DECLAR_VAR variables_locales FIN_DECLAR_VAR .

    $default  reduce using rule 3 (declar_de_variables_locales)


state 16

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 8 (variables_locales)


state 17

   20 cabecera_subprograma: error .

    $default  reduce using rule 20 (cabecera_subprograma)


state 18

   18 cabecera_subprograma: DECLAR . ID PARIZQ PARDER
   19                     | DECLAR . ID PARIZQ declaraciones_id PARDER

    ID  shift, and go to state 25


state 19

    5 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 5 (declar_de_subprogs)


state 20

    7 declar_subprog: cabecera_subprograma . bloque

    INICIOBLOQUE  shift, and go to state 3

    bloque  go to state 26


state 21

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs sentencias . FINBLOQUE
   23 sentencias: sentencias . sentencia

    error         shift, and go to state 27
    ID            shift, and go to state 28
    METERDATOS    shift, and go to state 29
    MIENTRAS      shift, and go to state 30
    SI            shift, and go to state 31
    SACARDATOS    shift, and go to state 32
    FOR           shift, and go to state 33
    INICIOBLOQUE  shift, and go to state 3
    FINBLOQUE     shift, and go to state 34
    RETURN        shift, and go to state 35
    DOLAR         shift, and go to state 36

    bloque                     go to state 37
    sentencia                  go to state 38
    sentencia_asignacion       go to state 39
    sentencia_if               go to state 40
    sentencia_for_pascal       go to state 41
    sentencia_while            go to state 42
    sentencia_entrada          go to state 43
    sentencia_salida           go to state 44
    sentencia_return           go to state 45
    sentencia_adelante_atras   go to state 46
    sentencia_principio_lista  go to state 47


state 22

   11 cuerpo_declar_variables: DECLAR ID error .

    $default  reduce using rule 11 (cuerpo_declar_variables)


state 23

   16 asig_valor: OP_ASIGNACION . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 59
    agregado   go to state 60
    funcion    go to state 61


state 24

   10 cuerpo_declar_variables: DECLAR ID asig_valor . mas_variables PYC

    $default  reduce using rule 15 (mas_variables)

    mas_variables  go to state 62


state 25

   18 cabecera_subprograma: DECLAR ID . PARIZQ PARDER
   19                     | DECLAR ID . PARIZQ declaraciones_id PARDER

    PARIZQ  shift, and go to state 63


state 26

    7 declar_subprog: cabecera_subprograma bloque .

    $default  reduce using rule 7 (declar_subprog)


state 27

   36 sentencia_asignacion: error .

    $default  reduce using rule 36 (sentencia_asignacion)


state 28

   35 sentencia_asignacion: ID . OP_ASIGNACION expresion PYC
   81 sentencia_adelante_atras: ID . SENT_LIST PYC

    OP_ASIGNACION  shift, and go to state 64
    SENT_LIST      shift, and go to state 65


state 29

   43 sentencia_entrada: METERDATOS . lista_variables PYC

    error  shift, and go to state 66
    ID     shift, and go to state 67

    lista_variables  go to state 68


state 30

   42 sentencia_while: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  shift, and go to state 69


state 31

   37 sentencia_if: SI . PARIZQ expresion PARDER THEN sentencia
   38             | SI . PARIZQ expresion PARDER THEN sentencia ELSE sentencia

    PARIZQ  shift, and go to state 70


state 32

   47 sentencia_salida: SACARDATOS . lista_expresiones_o_cadena PYC

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    CADENA       shift, and go to state 71
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    lista_expresiones_o_cadena  go to state 72
    expr_cad                    go to state 73
    expresion                   go to state 74
    agregado                    go to state 60
    funcion                     go to state 61


state 33

   39 sentencia_for_pascal: FOR . sentencia_asignacion TO valor DO sentencia

    error  shift, and go to state 27
    ID     shift, and go to state 75

    sentencia_asignacion  go to state 76


state 34

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE .

    $default  reduce using rule 2 (bloque)


state 35

   52 sentencia_return: RETURN . expresion PYC

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 77
    agregado   go to state 60
    funcion    go to state 61


state 36

   82 sentencia_principio_lista: DOLAR . ID PYC

    ID  shift, and go to state 78


state 37

   25 sentencia: bloque .

    $default  reduce using rule 25 (sentencia)


state 38

   23 sentencias: sentencias sentencia .

    $default  reduce using rule 23 (sentencias)


state 39

   26 sentencia: sentencia_asignacion .

    $default  reduce using rule 26 (sentencia)


state 40

   27 sentencia: sentencia_if .

    $default  reduce using rule 27 (sentencia)


state 41

   28 sentencia: sentencia_for_pascal .

    $default  reduce using rule 28 (sentencia)


state 42

   29 sentencia: sentencia_while .

    $default  reduce using rule 29 (sentencia)


state 43

   30 sentencia: sentencia_entrada .

    $default  reduce using rule 30 (sentencia)


state 44

   31 sentencia: sentencia_salida .

    $default  reduce using rule 31 (sentencia)


state 45

   32 sentencia: sentencia_return .

    $default  reduce using rule 32 (sentencia)


state 46

   33 sentencia: sentencia_adelante_atras .

    $default  reduce using rule 33 (sentencia)


state 47

   34 sentencia: sentencia_principio_lista .

    $default  reduce using rule 34 (sentencia)


state 48

   77 expresion: ID .
   86 funcion: ID . PARIZQ lista_expresiones_o_cadena PARDER

    PARIZQ  shift, and go to state 79

    $default  reduce using rule 77 (expresion)


state 49

   78 expresion: CONST .

    $default  reduce using rule 78 (expresion)


state 50

   53 expresion: PARIZQ . expresion PARDER

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 80
    agregado   go to state 60
    funcion    go to state 61


state 51

   83 agregado: CORIZQ . lista_consts CORDER

    CONST  shift, and go to state 81

    lista_consts  go to state 82


state 52

   58 expresion: ASTERISCO . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 83
    agregado   go to state 60
    funcion    go to state 61


state 53

   62 expresion: OP_AND_BITS . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 84
    agregado   go to state 60
    funcion    go to state 61


state 54

   54 expresion: MASMAS . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 85
    agregado   go to state 60
    funcion    go to state 61


state 55

   55 expresion: MENOSMENOS . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 86
    agregado   go to state 60
    funcion    go to state 61


state 56

   60 expresion: MAS_MENOS . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 87
    agregado   go to state 60
    funcion    go to state 61


state 57

   59 expresion: OP_LIST_UN . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 88
    agregado   go to state 60
    funcion    go to state 61


state 58

   61 expresion: NEGACION . expresion

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 89
    agregado   go to state 60
    funcion    go to state 61


state 59

   16 asig_valor: OP_ASIGNACION expresion .
   56 expresion: expresion . MASMAS
   57          | expresion . MENOSMENOS
   63          | expresion . ARRARR expresion
   64          | expresion . MAS_MENOS expresion
   65          | expresion . OP_LIST_MUL expresion
   66          | expresion . OP_OR_LOG expresion
   67          | expresion . OP_AND_LOG expresion
   68          | expresion . OP_OR_BITS expresion
   69          | expresion . OP_AND_BITS expresion
   70          | expresion . OP_OR_EXC expresion
   71          | expresion . OP_EQ_NEQ expresion
   72          | expresion . OP_REL expresion
   73          | expresion . ASTERISCO expresion
   74          | expresion . OP_MUL expresion
   75          | expresion . MENOSMENOS expresion
   76          | expresion . MASMAS expresion ARROBA expresion

    ASTERISCO    shift, and go to state 90
    ARRARR       shift, and go to state 91
    OP_OR_LOG    shift, and go to state 92
    OP_AND_LOG   shift, and go to state 93
    OP_OR_BITS   shift, and go to state 94
    OP_OR_EXC    shift, and go to state 95
    OP_AND_BITS  shift, and go to state 96
    OP_EQ_NEQ    shift, and go to state 97
    OP_REL       shift, and go to state 98
    MASMAS       shift, and go to state 99
    MENOSMENOS   shift, and go to state 100
    MAS_MENOS    shift, and go to state 101
    OP_LIST_MUL  shift, and go to state 102
    OP_MUL       shift, and go to state 103

    $default  reduce using rule 16 (asig_valor)


state 60

   80 expresion: agregado .

    $default  reduce using rule 80 (expresion)


state 61

   79 expresion: funcion .

    $default  reduce using rule 79 (expresion)


state 62

   10 cuerpo_declar_variables: DECLAR ID asig_valor mas_variables . PYC
   14 mas_variables: mas_variables . COMA ID asig_valor

    PYC   shift, and go to state 104
    COMA  shift, and go to state 105


state 63

   18 cabecera_subprograma: DECLAR ID PARIZQ . PARDER
   19                     | DECLAR ID PARIZQ . declaraciones_id PARDER

    DECLAR  shift, and go to state 106
    PARDER  shift, and go to state 107

    declaraciones_id  go to state 108


state 64

   35 sentencia_asignacion: ID OP_ASIGNACION . expresion PYC

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 109
    agregado   go to state 60
    funcion    go to state 61


state 65

   81 sentencia_adelante_atras: ID SENT_LIST . PYC

    PYC  shift, and go to state 110


state 66

   46 lista_variables: error .

    $default  reduce using rule 46 (lista_variables)


state 67

   45 lista_variables: ID .

    $default  reduce using rule 45 (lista_variables)


state 68

   43 sentencia_entrada: METERDATOS lista_variables . PYC
   44 lista_variables: lista_variables . COMA ID

    PYC   shift, and go to state 111
    COMA  shift, and go to state 112


state 69

   42 sentencia_while: MIENTRAS PARIZQ . expresion PARDER sentencia

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 113
    agregado   go to state 60
    funcion    go to state 61


state 70

   37 sentencia_if: SI PARIZQ . expresion PARDER THEN sentencia
   38             | SI PARIZQ . expresion PARDER THEN sentencia ELSE sentencia

    ID           shift, and go to state 48
    CONST        shift, and go to state 49
    PARIZQ       shift, and go to state 50
    CORIZQ       shift, and go to state 51
    ASTERISCO    shift, and go to state 52
    OP_AND_BITS  shift, and go to state 53
    MASMAS       shift, and go to state 54
    MENOSMENOS   shift, and go to state 55
    MAS_MENOS    shift, and go to state 56
    OP_LIST_UN   shift, and go to state 57
    NEGACION     shift, and go to state 58

    expresion  go to state 114
    agregado   go to state 60
    funcion    go to state 61


state 71

   51 expr_cad: CADENA .

    $default  reduce using rule 51 (expr_cad)


state 72

   47 sentencia_salida: SACARDATOS lista_expresiones_o_cadena . PYC
   48 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expr_cad

    PYC   shift, and go to state 115
    COMA  shift, and go to state 116


state 73

   49 lista_expresiones_o_cadena: expr_cad .

    $default  reduce using rule 49 (lista_expresiones_o_cadena)


state 74

   50 expr_cad: expresion .
   56 expresion: expresion . MASMAS
   57          | expresion . MENOSMENOS
   63          | expresion . ARRARR expresion
   64          | expresion . MAS_MENOS expresion
   65          | expresion . OP_LIST_MUL expresion
   66          | expresion . OP_OR_LOG expresion
   67          | expresion . OP_AND_LOG expresion
   68          | expresion . OP_OR_BITS expresion
   69          | expresion . OP_AND_BITS expresion
   70          | expresion . OP_OR_EXC expresion
   71          | expresion . OP_EQ_NEQ expresion
   72          | expresion . OP_REL expresion
   73          | expresion . ASTERISCO expresion
   74          | expresion . OP_MUL expresion
   75          | expresion . MENOSMENOS expresion
   76          | expresion . MASMAS expresion ARROBA expresion

    ASTERISCO    shift, and go to state 90
    ARRARR       shift, and go to state 91
    OP_OR_LOG    shift, and go to state 92
    OP_AND_LOG   shift, and go to state 93
    OP_OR_BITS   shift, and go to state 94
    OP_OR_EXC    shift, and go to state 95
    OP_AND_BITS  shift, and go to state 96
    OP_EQ_NEQ    shift, and go to state 97
    OP_REL       shift, and go to state 98
    MASMAS       shift, and go to state 99
    MENOSMENOS   shift, and go to state 100
    MAS_MENOS    shift, and go to state 101
    OP_LIST_MUL  shift, and go to state 102
    OP_MUL       shift, and go to state 103

    $default  reduce using rule 50 (expr_cad)


state 75

   35 sentencia_asignacion: ID . OP_ASIGNACION expresion PYC

    OP_ASIGNACION  shift, and go to state 64


state 76

   39 sentencia_for_pascal: FOR sentencia_asignacion . TO valor DO sentencia

    TO  shift, and go to state 117


state 77
